--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,12 @@
   "version": 2,
   "builds": [
     { "src": "api/index.js", "use": "@vercel/node" },
-    { "src": "index.html", "use": "@vercel/static" }
+    { "src": "index.html", "use": "@vercel/static" },
+    { "src": "scripts/**", "use": "@vercel/static" } 
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "api/index.js" },
-    { "src": "/(.*)", "dest": "index.html" }
+    { "src": "/scripts/(.*)", "dest": "/scripts/$1" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
-
-
-
-
-  
