--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
   "builds": [
     { "src": "api/index.js", "use": "@vercel/node" },
     { "src": "index.html", "use": "@vercel/static" },
+    { "src": "app.html", "use": "@vercel/static" },
     { "src": "scripts/**", "use": "@vercel/static" } 
   ],
   "routes": [
