--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,14 @@
     { "src": "api/index.js", "use": "@vercel/node" },
     { "src": "index.html", "use": "@vercel/static" },
     { "src": "app.html", "use": "@vercel/static" },
-    { "src": "scripts/**", "use": "@vercel/static" } 
+    { "src": "app_style.css", "use": "@vercel/static" },
+    { "src": "scripts/**", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "api/index.js" },
     { "src": "/scripts/(.*)", "dest": "/scripts/$1" },
+    { "src": "/app_style.css", "dest": "/app_style.css" },
+    { "src": "/app.html", "dest": "/app.html" },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
